# sshler

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DASHBOARD_UX_PLAN.md  FIXES_APPLIED.md  HANDOFF.md  HANDOFF_README.md  IMPROVEMENT_PLAN.md  MANIFEST.in  MODERNIZATION_TODO.md  MULTI_TERMINAL_FIX_PLAN.md  Makefile  README.ja.md  README.md  ROADMAP.md  TERMINAL_DEBUG_HANDOFF.md  handoff.md  justfile  next-session.md  pyproject.toml  test_fixes.py
.claude/: settings.local.json
.github/workflows/: ci.yml  pypi.yml
.hypothesis/constants/: 0f679cc85ecd986c  11c16d98d0618084  1ef97c789ebd9abe  1fc9d66ef491149f  266fec817f62f5f0  2919cba5435e6cfb  34a6f2a947f00d0b  385caceded2a0b47  3c43ae01e19a36de  41cb44b1aec18e81  42174099d07ebaf9  4781b2b09d1f0ba6  484ec8168bbc1fde  49180468525980d1  545d14564eda30a2  57a343eb88d1584e  5df351358bc078d1  63c24db61cc511a8  6c9e15b433976410  6cfa11c540f3ef0d  7066e70be13c8f63  708aee872675a8f7  78f5565e4261ca0c  7bd4bbcb2d5d3c88  822e6251c8cdb2c0  8e2bbe8d0dd99964  96a2fdac7dbf9891  981ee30f88e14b43  996d7ca7b8e2918c  aa281c855b6caf1e  ae0db8db34162b25  b3f093a1069768f4  c58160407c389fc3  c808502c827459c7  c994e1a0f1004f43  cc1867428424bbeb  cc25e49aaef10b74  dbd875b13d6adde2  e35341ebd669a5dd  ef96a44ab32b0e6b
.hypothesis/examples/04e6b3400353b141/: 0f5c55abf481aea1
.hypothesis/examples/0f5c55abf481aea1/: f46dc50639a64fe0
.kiro/specs/vue3-migration-completion/: design.md  requirements.md  tasks.md
.sandbox/.diary/: 2025-10-05-issues.md  2025-10-05.md  2025-10-10-pypi-release.md
docs/: dev-workflow.md  vue-migration-roadmap.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.vue  i18n.ts  main.ts
frontend/src/api/: http.spec.ts  http.ts  types.ts
frontend/src/assets/: fonts.css
frontend/src/components/: AppHeader.spec.ts  AppHeader.test.ts  AppHeader.vue  BatchMoveModal.vue  CodeEditor.vue  CommandPalette.spec.ts  CommandPalette.vue  ContentSearchInput.vue  ContextMenu.vue  DiffViewer.vue  DirectoryPickerModal.vue  DirectorySearchInput.spec.ts  DirectorySearchInput.vue  FavoritesPanel.vue  FileBreadcrumb.vue  FileDiffModal.vue  FileEditorModal.vue  FilePreviewModal.vue  FileUploadZone.vue  MobileInputBar.vue  MultiPaneTerminal.vue  RecoveryModal.vue  SessionSwitcher.vue  ShortcutsOverlay.vue  SnippetsPanel.vue  Terminal.vue  TunnelsPanel.vue
frontend/src/composables/: useResponsive.spec.ts  useResponsive.ts
frontend/src/config/: naive-theme.ts
frontend/src/locales/: en.ts  ja.ts
frontend/src/router/: index.ts
frontend/src/stores/: app.spec.ts  app.ts  auth.ts  bootstrap.spec.ts  bootstrap.ts  boxes.ts  directory.ts  favorites.spec.ts  favorites.ts  files.spec.ts  files.ts  files_terminal.spec.ts  sessions.ts  snippets.ts  tunnels.ts
frontend/src/styles/: main.css  responsive.css
frontend/src/utils/: emoji-favicon.ts
frontend/src/views/: BoxesView.vue  FilesView.vue  LoginView.vue  MultiTerminalView.vue  NotFoundView.vue  OverviewView.vue  SettingsView.vue  TerminalView.spec.ts  TerminalView.vue
scripts/: check_frontend_dist.py
sshler/: auth.py  cli.py  config.py  config_cache.py  rate_limit.py  session.py  settings.py  snapshot.py  spa.py  ssh.py  ssh_pool.py  state.py  validation.py  webapp.py
sshler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sshler/api/: __init__.py  archive.py  auth.py  batch.py  boxes.py  config.py  dependencies.py  files.py  grep.py  helpers.py  models.py  rate_limiting.py  recovery.py  search.py  sessions.py  snippets.py  terminal.py  tunnels.py
sshler/static/: base.js  command-palette.js  docs.js  file-browser.js  file-view.js  manifest.json  multi-session.js  style.css  sw.js  term.js
sshler/templates/: base.html  box.html  docs.html  file_edit.html  file_view.html  index.html  new_box.html  session_list.html  term.html
sshler/templates/partials/: dir_listing.html
tests/: conftest.py  test_api_v1.py  test_archive.py  test_basic.py  test_batch_ops.py  test_command_injection.py  test_config.py  test_database_indexes.py  test_dev_workflow.py  test_grep.py  test_handshake_status.py  test_httpx_ws.py  test_path_validation.py  test_rate_limit.py  test_routes.py  test_search.py  test_session_auth.py  test_snippets.py  test_ssh.py  test_tunnels.py  test_websocket.py
tests/e2e/: conftest.py  test_mobile_responsive.py  test_smoke_playwright.py  test_terminal_websocket.py  test_vue_app.py
