
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sshler"
version = "0.1.0"
description = "A local FastAPI-powered SSH multiplexer for tmux-in-browser — from your laptop only."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "You"}]
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "asyncssh>=2.14.0",
    "platformdirs>=4.2",
    "pydantic>=2.7",
    "python-multipart>=0.0.9"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["ssh", "tmux", "fastapi", "sftp", "htmx"]

[project.optional-dependencies]
dev = [
    "anyio>=4.4",
    "httpx>=0.27.0",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.6",
]

[project.scripts]
sshler = "sshler.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
sshler = ["templates/*.html", "templates/partials/*.html", "static/*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "N"]
ignore = ["E203", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
